buildDocs/docs/.vuepress/styles/index.styl
font-size = 14px

bg-color = #111117
light-bg-color = #0d0d12
input-color = #22282F
text-color = #CCC
main-color = #6ef76e
secondary-color = #377B37
link-color = #6AF

console-color = input-color

@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap')

*
  font-family: 'Fira Sans'


::-webkit-scrollbar
  background: hsl(240, 15%, 8%) !important
  border-inline: solid white 1px

::-webkit-scrollbar-thumb
  background: white
  border: 5px solid transparent
  border-radius: 10px
  background-clip: content-box

p
  font-size: font-size

html, body, .sidebar, .navbar, .links, .search-box
  color: text-color
  background-color: bg-color !important

.navbar .site-name
  color: main-color !important

h1, h2, h3, h4, h5, h6, a.sidebar-link
  color: main-color !important

a
  color: link-color

.sidebar
  border: none !important;

.search-box input
  color: text-color !important
  background-color: input-color !important

.search-box input:focus
  border-color: secondary-color !important

.search-box .suggestions
  background-color: #22282F !important
  border: 0px

.search-box .suggestions .focused
  background-color: #44444f !important

.search-box .suggestions a
  color: secondary-color !important

.search-box .suggestions .focused a
  color: link-color !important

a.sidebar-link
  color: secondary-color !important
  font-size: font-size !important

a.sidebar-link:active
  color: secondary-color !important

a.active.sidebar-link
  border-left-color: main-color !important

.sidebar-sub-headers a.sidebar-link
  width: fit-content
  padding-inline: 10px
  margin-inline-start: 10px
  margin-block-end: 1rem
  border-radius: 5px
  transition:0.5s

.sidebar-sub-headers a.sidebar-link:hover
  background: light-bg-color !important

.sidebar-sub-headers a.sidebar-link.active
  color: secondary-color !important
  background: main-color !important
  width: fit-content
  padding-inline: 10px
  margin-inline-start: 10px
  border-radius: 5px
  font-weight: 500

.language-text
  background-color: console-color !important

tr
  background-color: #081008

tr:nth-child(2n)
  background-color: #0C180C

th
  background-color: #183018

